common/dex/overlays/oauth2-proxy/requestauthetication.kubeflow.yaml
apiVersion: security.istio.io/v1
kind: RequestAuthentication
metadata:
  name: dex-jwt
  namespace: kubeflow
spec:
  jwtRules:
  - forwardOriginalToken: true
    issuer: https://vcluster-romanok1-dex.user-apps.eks.uat.rdigtm.roche.com
    # issuer: https://vcluster-romanok1.user-apps.eks.uat.rdigtm.roche.com/dex
    # issuer: https://eks.uat.rdigtm.roche.com/dex
